# AWAutoGain

./: CMakeLists.txt  LICENSE  README.md  airwrap.cpp  awautogain.exp  awautogain.lib  shim.cpp
src/: shim.cpp  vst2_min.h
